Changed a word in the content of the page

--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -89,7 +89,7 @@ Once the problem statement was identified, we then explored how to tackle this i
 
                   <p class="mt-5 MAIN-STUFF" > Choice of Chassis </p>
                   <p class="mt-5 sub-stuff" id="section3">  There exist some bacteria that possess natural pathways capable of degrading the toxic byproducts. Through extensive literature survey, we narrowed down our possible chassis options to three species capable of degrading the byproducts -<i>Acinetobacter baylyi </i>[3], <i> Pseudomonas putida </i>[4] [5]and <i> Pseudomonas fluorescens </i>[6].<br>
-All three of these organisms were equally suited for our chassis, therefore, our first decision to make was this choice. <br>
+All three of these organisms were equally suited as our chassis, therefore, our first decision to make was this choice. <br>
 Besides the inherent ability to break down the chloroaniline byproducts, other major criteria we considered included:<br>
 <ul>
     <li>Survivability of the bacteria in the pH range of the wastewater and sludge</li>
