--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="{{ url_for('static', filename = 'bootstrap.min.css') }}" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap-icons.css') }}">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
