url_for (Fonts)

--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -13,6 +13,8 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
+  <link href="{{ url_for('static', filename='Font_Montserrat.css') }}" rel='stylesheet'>
+  <link href="{{ url_for('static', filename='Font_Poppins.css') }}" rel='stylesheet'>
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
