--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -76,6 +76,26 @@
 
       <div class="content">
                 <div class="m-2 mb-16">
+
+                    <p class="mt-3 sub-stuff"> <b> Our Goals </b></p>
+                    <p class ="mt-3 sub-stuff"> 
+                    <ol>
+                      <li><b>Education for all </b>irrespective of their background, language, age and location.</li>
+                      <li><b>Adaptability</b> of our educational content in accordance with the target audience. 
+</li>
+                      <li><b>Reproducibility</b> and <b>reusability</b> of our educational content.</li>
+                    </ol>
+                  </p>
+
+                  <p class="mt-3 sub-stuff"> <b> Our Impact </b></p>
+                  <ol>
+                    <li>4 presentations that are <b>accessible</b> to any iGEM team upon contacting us.</li>
+                    <li><b>11 schools </b>across the states of Tamil Nadu, Maharashtra and Karnataka in India.</li>
+                    <li>Taught working professionals across <b>9 states</b> in India—Karnataka, Tamil Nadu, Kerala, Andhra Pradesh, Maharashtra, Madhya Pradesh, West Bengal, Odisha and Uttar Pradesh.</li>
+                    <li>Our content will be used at around <b>14,102 schools</b> across all the states of India through India Literacy Project—a non-profit organization aimed at making educational content more accessible to government schools.</li>
+                  </ol>
+                  </p>
+
                     <p class="mt-5 MAIN-STUFF" id="section1"> Overview<br></p>
                     <p class="mt-3 sub-stuff"> <i>"Education is the most powerful weapon which you can use to change the world." 
 - Nelson Mandela.</i><br></p>
@@ -89,6 +109,7 @@ At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creat
 The success of our project depends heavily on our educational outreach. We aim to fight the stigma and false information surrounding GMOs  by developing a concrete understanding of the biology of wastewater management and the usage of  antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and ensures safety by encouraging constructive criticism.<br>
 <br>
 We aspire to foster mutual learning and dialogue, laying the foundation for active participation in shaping the future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips, activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic biology's transformative potential to address critical societal and environmental challenges.</p>
+<img src="https://static.igem.wiki/teams/4641/wiki/education/mindmap-of-target-age-groups-high-school-middle-school-primary-school-and-collegiate-students-working-professionals-general-public.png" class="img-fluid">
 <p class="mt-5 MAIN-STUFF" id="section2">Communicating Science to High School Students<br> </p>
 <p class="mt-5 sub-stuff"> 
 High School students in India are taught biology well in compliance with the educational curriculum. However, the definition of biology in India has become restricted to becoming a practicing medical doctor due to societal pressure, and thus, very rarely do students begin to explore the non-anatomy side of biology. Textbooks in India discuss genetic engineering and not Synthetic biology, making this a new concept for most students. New concepts and their potential applications in their daily life tend to ignite any student’s interest, which is why we chose to discuss synthetic biology with them. To help them explore how a new field can assist their daily life, given that suitable precautions are taken.<br>
@@ -97,6 +118,8 @@ We were able to successfully conduct these sessions with the help of a few anima
 We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— “I AM BOND.” <br>
 Our team members were able to visit several high schools across the states of Karnataka, Tamil Nadu and Maharashtra.<br>
 </p>
+
+<img src="https://static.igem.wiki/teams/4641/wiki/education/codon-chart-activity-from-the-ppt-made-by-kini-for-reference.png" class="img-fluid">
 
 <!-- Carousel -->
 
@@ -201,7 +224,7 @@ At the end of the session, after introducing our project and its applications, m
         <p>This session took place at a school located on the outskirts of Bangalore, a setting that often needs more access to the abundant educational resources typically found in more urban schools.
 During our visit, two team members held a session for 60 students. Remarkably, these students, who were in their senior secondary years, demonstrated an impressive aptitude for grasping these complex concepts. Their ability to comprehend and articulate ideas typically reserved for collegiate-level students was remarkable.<br>
 What was even more inspiring was the students' proactive engagement with the material. They absorbed the knowledge shared and displayed a keen interest in the subject matter. One student went the extra mile by diligently taking notes during the session and sharing them with one of our team members through social media. This initiative demonstrated their commitment to learning and enthusiasm for discussing topics</p>
-
+    <img src="https://static.igem.wiki/teams/4641/wiki/education/a-student-sending-one-of-the-members-a-picture-of-her-notes-after-the-session-on-synthetic-biology.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -233,7 +256,20 @@ The students showed keen interest in bioethics and biosafety, leading to engagin
         <p>Our team's visit to Board High School, a government school in Udupi, Karnataka, was a valuable experience. We interacted with 60 students from grades 8 and 9 despite initially planning a presentation designed for 11th and 12th graders. This presentation centered around synthetic biology and genetic engineering, had been well-received among older students in cities like Bangalore and Coimbatore.<br>
 One of the primary challenges we encountered at Board High School was the language barrier. While the school taught in both English and Kannada, the students primarily communicated in Kannada. To bridge this gap, we sought assistance from teachers and used numerous examples to make the content more accessible. We also explained amino acids using our music composition.
 Despite the language challenges, our visit proved to be fruitful. Some students showed genuine interest and asked questions about synthetic biology, indicating their curiosity and engagement with the topic. The highlight of our visit was the interactive activity we conducted. In this activity, students decoded an amino acid chain to reveal a secret message using a codon chart. This hands-on exercise was fun and highly engaging, showcasing the effectiveness of our teaching approach. Importantly, every student successfully decoded the message, demonstrating the effectiveness of our teaching methods.</p>
+      <figure>
+        <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/board-high-school-udupi-karnataka-1.jpg" class="img-fluid mt-4" alt="Image 1" style="border: 3px solid #555">
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/board-high-school-udupi-karnataka-2.jpg" class="img-fluid mt-4" alt="Image 2" style="border: 3px solid #555">
+                        </div>
+                      </div>
+        </div>
 
+        <figcaption style="text-align: center"> Board High School, Udupi, Karnataka </figcaption>
+      </figure>
       </div>
     </div>
   </div>
@@ -252,6 +288,11 @@ Recognizing the importance of effective communication, some team members provide
 Our visit concluded with another engaging activity in which students decoded an amino acid sequence to reveal a secret message using a codon chart. This exercise sparked curiosity and led to a lively discussion, during which students asked numerous questions and sought clarification on various conceptual aspects.<br>
 In conclusion, our educational visit to Board High School, followed by the visit to MJC School, helped us reflect and modify our teaching methods to cater to different populations of students in order to make synthetic biology more understandable.<br>
       </p>
+
+      <figure>
+        <img src="https://static.igem.wiki/teams/4641/wiki/education/mjc-school-udupi-karnataka.jpg">
+        <figcaption style="text-align: center">MJC School, Udupi, Karnataka</figcaption>
+        </figure>
 
       </div>
     </div>
@@ -287,8 +328,13 @@ Their inquiries ranged from the intriguing possibility of combining genes from a
     <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" >
       <div class="accordion-body">
         <p>To take our education a step further, we have collaborated with India Literacy Project (ILP). This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. <br>
-We translated our middle school educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus as additional content and be taught at almost <b>14,102 schools</b> across India. This gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community. </p><br>
+We translated our middle school educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus as additional content and be taught at almost <b>14,102 schools</b> across India. This gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community.<br><br </p>
+      
+      <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="https://static.igem.wiki/teams/4641/wiki/education/ilp-kannada-ppt.pdf" allowfullscreen></iframe>
       </div>
+      </div>
+
     </div>
   </div>
   </div>
@@ -306,10 +352,40 @@ We translated our middle school educational content on "Chemicals in Daily Use P
     </h2>
     <div id="collapseEleven" class="accordion-collapse collapse show" aria-labelledby="headingEleven">
       <div class="accordion-body">
-        <p>Our team visited an underprivileged primary school to inspire students and cultivate their interest in science. Upon asking about their future aspirations, many students appeared uncertain or expressed a desire to become cricketers. We introduced the idea of pursuing careers as doctors or scientists while not discouraging their present ambitions, and then we explained our ongoing project, highlighting its fascinating aspects.</p>
+        <p>Our team visited an underprivileged primary school to inspire students and cultivate their interest in science. Upon asking about their future aspirations, many students appeared uncertain or expressed a desire to become cricketers. We introduced the idea of pursuing careers as doctors or scientists while not discouraging their present ambitions, and then we explained our ongoing project, highlighting its fascinating aspects.<br><br></p>
+        <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-1.png" class="img-fluid mt-4" alt="Image 1" >
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-1.png" class="img-fluid mt-4" alt="Image 2" >
+                        </div>
+                      </div>
+        </div>
+
+        <p class="mt-5 sub-stuff"> <b>10/10/23</b></p>
+
+        <p class="mt-5 sub-stuff"> After our first visit to Sri Krishna Mandir, we were keen on interacting with the students again. We went back to them and engaged in interactive activities. Our activity booklet was handed out to them and they enjoyed the coloring, crossword, etc. We also distributed the Tricky Triclocarban comic strips which helped them get an understanding about the presence of harmful chemicals in daily use products and how synthetic biology can be applied to remove them. </p>
+
+        <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-3.png" class="img-fluid mt-4" style=>
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-4.png" class="img-fluid mt-4">
+                        </div>
+                      </div>
+        </div>
+
       </div>
+
     </div>
   </div>
+
+
+
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwelve">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
