--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -154,7 +154,7 @@ Our team members were able to visit several high schools across the states of Ka
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
@@ -308,7 +308,7 @@ Our documentation can aid future educational initiatives and highlight broader e
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
         <b>Prakriya International School </b> (5 July, 2023)
       </button>
     </h2>
@@ -346,8 +346,8 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEleven">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
-        <b>Sri Krishna Mandir, Hulimavu, Bangalore—</b>8th July 2023
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+        <b>Sri Krishna Mandir, Hulimavu, Bangalore—Date: 05/07/2023</b><br>
       </button>
     </h2>
     <div id="collapseEleven" class="accordion-collapse collapse show" aria-labelledby="headingEleven">
@@ -378,60 +378,113 @@ We translated our middle school educational content on "Chemicals in Daily Use P
                         </div>
                       </div>
         </div>
-
       </div>
 
     </div>
   </div>
 
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThiry">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirty" aria-expanded="false" aria-controls="collapseThirty">
+        <b>Dr. Nitte Shankar Adyanthaya Memorial English Medium School, Karkala, Karnataka— Date: 10/10/23</b>
+      </button>
+    </h2>
+    <div id="collapseThirty" class="accordion-collapse collapse" aria-labelledby="headingThirty">
+      <div class="accordion-body">
+        <p>In NSAM school, we delivered the concept of synthetic biology and genes in simple terms to over 200 primary school students. They took keen interest in the topic and were interactive with us. We discussed the concept of genes carrying hereditary information and modification of organisms using restriction enzymes or "molecular scissors". After the session, when asked the same questions to the students, they were able to answer it implying that they had gained an understanding of the topics. Followed by this, we handed out crayons and our specially curated activity booklets titled "Under the Sea" to the students that contained four activities- colouring, crossword, maze puzzle and word search. The students actively engaged in these activities and also told us that they enjoyed it a lot. It was a heartwarming experience to spark this enthusiasm about science in them at such a young age.</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-1.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-2.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-3.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-4.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-5.png">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+      </div>
+    </div>
+  </div>
+</div>
 
 
+
+<p class='mt-5 substring'> <b> Content created by us for primary school students:</b> </p>
+
+<div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwelve">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
-        <b>Content created by us for primary school students</b>
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+        <b>"Tricky Ttriclocarban" comic strip</b>
       </button>
     </h2>
     <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" >
       <div class="accordion-body">
+        <p>Our unique and personalized comic strip titled “Tricky Triclocarban” has two parts, wherein the first part explains the effects of TCC on the environment. In contrast, the second part focused on how synthetic biology could solve this problem effectively. By using attractive graphical illustrations and simplifying scientific terms, we aimed to use this comic strip as a means to educate primary school students about synthetic biology in general and our project idea; this turned out to be a massive success as they stood awestruck looking at the comic and trying to get an understanding of the same while we explained it to them bit by bit!<br><br></p>
 
+        <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="https://static.igem.wiki/teams/4641/wiki/education/tcc-comic-strip-1.pdf" allowfullscreen></iframe>
       </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThirtheen">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
-        <b>Tricky triclocarban comic strip:</b>
 
-      </button>
-    </h2>
-    <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen">
-      <div class="accordion-body">
-        <p>Our unique and personalized comic strip titled “Tricky Triclocarban” came out in two parts, wherein the first part explained the effects of TCC on the environment. In contrast, the second part focused on how synthetic biology could solve this problem effectively. By using attractive graphical illustrations and simplifying scientific terms, we aimed to use this comic strip as a means to educate primary school students about synthetic biology in general and our project idea; this turned out to be a massive success as they stood awestruck looking at the comic and trying to get an understanding of the same while we explained it to them bit by bit!</p>
+      <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="https://static.igem.wiki/teams/4641/wiki/education/tcc-comic-strip-2.pdf" allowfullscreen></iframe>
+      </div>
+
+
       </div>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingFourteen">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
-        <b>Activity booklet</b>
+    <h2 class="accordion-header" id="headingTwelve">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+        <b>Activity booklet- “Under the Sea”</b>
       </button>
     </h2>
-    <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen">
+    <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" >
       <div class="accordion-body">
-        <p>GMOs are frequently faced with mistrust, so to demystify and explain the science behind it in the most approachable way possible, we set out to create an activity booklet for children.</p><br>
+        <p>GMOs are frequently faced with mistrust, so to demystify and explain the science behind it in the most approachable way possible, we set out to create an activity booklet for children. It involves various activities that the students can engage in like coloring, maze puzzle, crossword, odd one out and word search. It is an interactive way to convey the concept of water pollution to them<br></p>
+
+        <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="https://static.igem.wiki/teams/4641/wiki/education/activity-book-final.pdf" allowfullscreen></iframe>
+      </div>
+
+
+
       </div>
     </div>
   </div>
-  </div>
+
+</div>
+
+
+
+
 
   <p class='mt-5 MAIN-STUFF' id='section5'> Presentation to our scientific peers</p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingFifteen">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
         <b>Lab Safety and Security Session</b> 
       </button>
     </h2>
@@ -448,6 +501,35 @@ We translated our middle school educational content on "Chemicals in Daily Use P
       </ol>
 
       The students expressed their gratitude for the informative and engaging sessions, and they enthusiastically embraced the opportunity to familiarize themselves with laboratory safety protocols and equipment. These sessions provided them with valuable knowledge and an inspiring introduction to the exciting world of scientific research within our team.</p>
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-1.png" ">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-2.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-3.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-4.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-5.png" >
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
       </div>
     </div>
   </div>
@@ -465,6 +547,40 @@ One of the central lessons from the workshop was the exploration of utilitarian 
 Our round-table discussion on gene therapy to enhance human functions further broadened our understanding of bioethical issues; this allowed us to explore the ethical boundaries of human enhancement and the nuanced considerations that come into play when we manipulate our genetic makeup.<br><br>
 Throughout the workshop, the subjectivity of ethics emerged as a critical theme. We emphasized that ethical judgments can vary among individuals and cultures, underlining the need for open dialogue and considering diverse perspectives when making ethical decisions.<br><br>
 We ended the workshop with a British Parliamentary-style debate on the motion, "This house would restart research and development in bioweapons." In summary, the workshop reinforced that scientific, ethical decisions are often complex and demand thoughtful consideration of potential consequences. It underscored the importance of engaging in open dialogue, respecting diverse viewpoints, and effectively communicating complex ideas.<br><br></p>
+
+   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop1.png" ">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-2.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-3.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-4.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-5.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-6.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/ldq-ethics-workshop-7.png" >
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
       </div>
     </div>
@@ -506,6 +622,8 @@ Task 3: Innovative Human Practices Ideas<br>
 
 Overall, the tasks were designed in a way that idea creativity was encouraged, yet at the same time, basic concepts were strengthened. Therefore, our educational program engaged college students in a multifaceted synthetic biology and biotechnology exploration. The tasks we designed aimed to educate and assess their comprehension and application of the knowledge acquired. Through these tasks, we strived to foster a deeper understanding of the field and encourage creative thinking while maintaining academic rigor and ethical research practices.</p>
 
+      <iframe class="https://static.igem.wiki/teams/4641/wiki/education/session0-summary.pdf" allowfullscreen></iframe>
+
       </div>
     </div>
   </div>
@@ -530,7 +648,7 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEighteen">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
         <b>The Rotary Club of Coimbatore Metropolis, Coimbatore</b>
       </button>
     </h2>
@@ -559,7 +677,7 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwentyone">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
         <b>Bioremediation Conclave</b>
       </button>
     </h2>
