Checking if expansion works

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -154,7 +154,7 @@ Our team members were able to visit several high schools across the states of Ka
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
@@ -308,7 +308,7 @@ Our documentation can aid future educational initiatives and highlight broader e
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
         <b>Prakriya International School </b> (5 July, 2023)
       </button>
     </h2>
@@ -346,7 +346,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEleven">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
         <b>Sri Krishna Mandir, Hulimavu, Bangalore—Date: 05/07/2023</b><br>
       </button>
     </h2>
@@ -432,7 +432,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwelve">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="true" aria-controls="collapseTwelve">
         <b>"Tricky Ttriclocarban" comic strip</b>
       </button>
     </h2>
@@ -484,7 +484,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingFifteen">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="true" aria-controls="collapseFifteen">
         <b>Lab Safety and Security Session</b> 
       </button>
     </h2>
@@ -648,7 +648,7 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEighteen">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen">
         <b>The Rotary Club of Coimbatore Metropolis, Coimbatore</b>
       </button>
     </h2>
@@ -677,7 +677,7 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwentyone">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="true" aria-controls="collapseTwentyone">
         <b>Bioremediation Conclave</b>
       </button>
     </h2>
